--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "todoshka",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Todo list application with NestJS and MongoDB",
+  "author": "Viktoria Kostak",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,8 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.4.4",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
